--- a/src/style.css
+++ b/src/style.css
@@ -68,7 +68,8 @@ h1 {
 .weather-forcast-temperatures{
     font-size: 13px;
 }
-.weather-forecast-temperatures-max"{
+.weather-forecast-temperatures-max {
+    display:inline;
     
 }
 .weather-forecast-temperatures-min {
@@ -82,7 +83,7 @@ h1 {
 
 .weather-forecast .col-2 {
   flex: 0 0 auto;
-  width: 16.66667%;
+  text-align: center;
 }
 
 header {
@@ -113,4 +114,8 @@ header {
 
 .search-form-button:hover {
     background-color: #dde0ab;
+}
+
+footer{
+    margin-bottom: auto;
 }
